# guepard-shield

./: .gitignore  README.md  pyproject.toml
docs/: WALKTHROUGH.md  architecture.md  report.md  research-plan.md  research-proposal.md
docs/chapters/: 1_Introduction.md  2_Literature_Review.md  3_Methodology.md  4_Theoretical_Analysis.md  5_Numerical_Results.md  6_Conclusions.md
docs/plans/: 2026-03-19-p1-p1.5-design.md  2026-03-19-p1-p1.5-plan.md  2026-03-28-p2-p45-experiments-design.md  2026-04-13-eda-report.md  2026-04-24-phase3-rule-extraction.md
guepard-shield-model/: pyproject.toml
guepard-shield-model/gp/: config.py
guepard-shield-model/gp/data_loader/: lidds_2021_loader.py
guepard-shield-model/notebooks/: cuda.py  p2_teacher_lidds.py
guepard-shield-model/src/guepard/data_loader/: datamodule.py  lidds_corpus.py  phase_segmenter.py  teacher_dataset.py
guepard-shield-model/src/guepard/models/: teacher.py
guepard-shield-model/src/guepard/training/: teacher_module.py
thesis/: Cover.tex  Cover2.tex  main.tex
