[project]
name = "guepard-shield-model"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "polars>=1.37.1",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]

[dependency-groups]
dev = ["jupytext>=1.19.1", "pytest>=8.0.0", "ty>=0.0.12"]
